Closed
Bug 1326209
Opened 9 years ago
Closed 8 years ago
Change background-color to use complex color
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla53
| Tracking | Status | |
|---|---|---|
| firefox53 | --- | fixed |
People
(Reporter: xidorn, Assigned: xidorn)
References
Details
Attachments
(2 files)
No description provided.
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 3•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8822433 [details]
Bug 1326209 part 1 - Make nsCSSRendering::DrawTableBorderSegment take nscolor for background color.
https://reviewboard.mozilla.org/r/101350/#review101912
Attachment #8822433 -
Flags: review?(dholbert) → review+
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8822434 [details]
Bug 1326209 part 2 - Change background-color to use complex color.
https://reviewboard.mozilla.org/r/101352/#review101922
Attachment #8822434 -
Flags: review?(dholbert) → review+
| Assignee | ||
Comment 5•8 years ago
|
||
Ah, this change turns the non-fatal assertion bug 871758 into a fatal assertion...
| Assignee | ||
Comment 6•8 years ago
|
||
With patch to bug 894245, it seems everything is fine now: https://treeherder.mozilla.org/#/jobs?repo=try&revision=5fcfb59d512f5b55a006857f4f8ec3edfb508b3c
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e09adfc32294
part 1 - Make nsCSSRendering::DrawTableBorderSegment take nscolor for background color. r=dholbert
https://hg.mozilla.org/integration/autoland/rev/064f7ee8484a
part 2 - Change background-color to use complex color. r=dholbert
Comment 8•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e09adfc32294
https://hg.mozilla.org/mozilla-central/rev/064f7ee8484a
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in
before you can comment on or make changes to this bug.
Description
•